Changes in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Scalable Machine Learning
-description: Research Work, Big Data Analytics
+title: Expository articles on my research work and other interests
+description: Research Work, Scalable Machine Learning, Big Data Systems
 # show_downloads: true
 # google_analytics:
 theme: jekyll-theme-cayman
